docs/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gati-tech-prod
  labels:
    app: gati-tech-ams
    environment: production
    team: platform
